--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Keyboard by FCT</title>
-<link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-<link href="css/main.css" rel="stylesheet" type="text/css" media="screen" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Keyboard by FCT</title>
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+    <link href="css/main.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
 <div id="wrapper">
-    <div id="header-wrapper">
-        <div id="header" class="container">
+    <header>
             <div id="logo">
                 <h1><a href="#">Keyboard </a></h1>
             </div>
-            <div id="menu">
+            <nav>
                 <ul>
                     <li class="current_page_item"><a href="#">Homepage</a></li>
                     <li><a href="#">Blog</a></li>
@@ -24,12 +24,12 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </div>
-        </div>
+            </nav>
         <div id="banner">
             <div class="content"><img src="img/img02.jpg" width="1000" height="300" alt="" /></div>
         </div>
     </div>
+	</header>
     <!-- end #header -->
 
     <div id="page">
@@ -107,9 +107,9 @@
     </div>
     <!-- end #page -->
 </div>
-<div id="footer">
+<footer>
     <p>Copyright (c) 2012 Sitename.com. All rights reserved.</p>
-</div>
+<footer>
 <!-- end #footer -->
 </body>
 </html>
