--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
+    <meta name="description" content="keyboards" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Keyboard by FCT</title>
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-    <link href="css/main.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+    <link href="css/main.css" rel="stylesheet" media="screen" />
 </head>
 <body>
 <div id="wrapper">
