--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Keyboard by FCT</title>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
     <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
-    <link href="css/main.css" rel="stylesheet" media="screen" />
+    <link href="css/main.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="wrapper">
