removed extra CSS
also added accidentally removed HTML back in

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
 <div id="wrapper">
-    <header>
+    <div id="header-wrapper">
+    <header id="header" class="container">
         <div id="logo">
             <h1><a href="#">Keyboard</a></h1>
         </div>
-            <nav>
+            <nav id="menu">
                 <ul>
                     <li class="current_page_item">  <a href="#">Homepage</a></li>
                     <li><a href="#">Blog</a></li>
