--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="header-wrapper">
     <header id="header" class="container">
         <div id="logo">
             <h1><a href="#">Keyboard</a></h1>
         </div>
             <nav id="menu">
                 <ul>
-                    <li class="current_page_item">  <a href="#">Homepage</a></li>
+                    <li class="current_page_item"><a href="#">Homepage</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Photos</a></li>
                     <li><a href="#">About</a></li>
@@ -26,7 +25,9 @@
                 </ul>
             </nav>
         <div id="banner">
-            <div class="content"><img src="img/img02.jpg" width="1000" height="300" alt="" /></div>
+            <div class="content">
+            <img src="img/img02.jpg" alt="keyboard" />
+            </div>
         </div>
     </div>
 	</header>
