media queries fix
very dumb mistake

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div style="clear: both;">&nbsp;</div>
         </main>
         <!-- end #content -->
-        <aside id="sidebar" class="container">
+        <aside id="sidebar">
             <ul>
                 <li>
                     <h2>Categories</h2>
